@@ -14,6 +14,7 @@ Version 1.4.9 - CVS
     (#1543573).
   - Provide View Unsafe Images link on viewing a text/html attachment.
   - Fix variable typo in folders_create.php (#1545316).
+  - Added Courier IMAP OUTBOX check to configtest utility.
 
 Version 1.4.8 - 11th August 2006
 --------------------------------
